src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>pse__Expense_Costs__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Expense Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__External_Costs__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>External Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__External_Resource__c</fullName>
        <defaultValue>false</defaultValue>
        <label>External Resource</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group</label>
        <referenceTo>pse__Grp__c</referenceTo>
        <relationshipLabel>Resources</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Hist_Sch_Utilization_Billable_Hours__c</fullName>
        <description>The historical scheduled utilization billable hours total for the current time period. This value has been copied from the associated Utilization Detail object for this time period.</description>
        <label>Hist Sch Utilization Billable Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Hist_Sch_Utilization_Credited_Hours__c</fullName>
        <description>The historical scheduled utilization credited hours total for the current time period. This value has been copied from the associated Utilization Detail object for this time period.</description>
        <label>Hist Sch Utilization Credited Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Hist_Sch_Utilization_Excluded_Hours__c</fullName>
        <description>The historical scheduled utilization excluded hours total for the current time period. This value has been copied from the associated Utilization Detail object for this time period.</description>
        <label>Hist Sch Utilization Excluded Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Hist_Sch_Utilization_Held_Hours__c</fullName>
        <label>Hist Sch Utilization Held Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Hist_Sch_Utilization_Non_Billable_Hrs__c</fullName>
        <description>The historical scheduled utilization non-billable hours total for the current time period. This value has been copied from the associated Utilization Detail object for this time period.</description>
        <label>Hist Sch Utilization Non Billable Hrs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Historical_Utilization_Billable_Hours__c</fullName>
        <description>The historical utilization billable hours total for the current time period. This value has been copied from the associated Utilization Detail object for this time period.</description>
        <label>Historical Utilization Billable Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Historical_Utilization_Calendar_Hours__c</fullName>
        <description>The historical utilization calendar hours for the current time period. This value has been copied from the associated Utilization Detail object for this time period.</description>
        <label>Historical Utilization Calendar Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Historical_Utilization_Credited_Hours__c</fullName>
        <description>The historical utilization credited hours total for the current time period. This value has been copied from the associated Utilization Detail object for this time period.</description>
        <label>Historical Utilization Credited Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Historical_Utilization_Excluded_Hours__c</fullName>
        <description>The historical utilization excluded hours total for the current time period. This value has been copied from the associated Utilization Detail object for this time period.</description>
        <label>Historical Utilization Excluded Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Historical_Utilization_Non_Billable_Hrs__c</fullName>
        <description>The historical utilization non-billable hours total for the current time period. This value has been copied from the associated Utilization Detail object for this time period.</description>
        <label>Historical Utilization Non Billable Hrs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Historical_Utilization_Target_Attainment__c</fullName>
        <formula>IF(pse__Historical_Utilization_Target__c = 0,
IF(pse__Historical_Utilization__c &lt;= 0,0,1),
pse__Historical_Utilization__c / pse__Historical_Utilization_Target__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Historical Utilization Target Attainment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Historical_Utilization_Target_Hours__c</fullName>
        <label>Historical Utilization Target Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Historical_Utilization_Target__c</fullName>
        <formula>IF(pse__Historical_Utilization_Calendar_Hours__c = 0,
0,
pse__Historical_Utilization_Target_Hours__c / pse__Historical_Utilization_Calendar_Hours__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Historical Utilization Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Historical_Utilization__c</fullName>
        <description>The historical utilization percentage for the current time period. This value has been copied from the associated Utilization Detail object for this time period.</description>
        <label>Historical Utilization</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Internal_Budget__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Internal Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Internal_Costs__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Internal Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Invoiced__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Invoiced</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Is_Resource_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Resource Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Is_Resource__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Resource</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Last_Date__c</fullName>
        <description>A Resource&apos;s last day of employment.</description>
        <inlineHelpText>A Resource&apos;s last day of employment.</inlineHelpText>
        <label>Last Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Latitude_PSA__c</fullName>
        <label>Latitude (PSA)</label>
        <precision>10</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tertiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pse__Longitude_PSA__c</fullName>
        <label>Longitude (PSA)</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Margin__c</fullName>
        <formula>pse__Billings__c + pse__Pass_Through_Billings__c - pse__Internal_Costs__c - pse__External_Costs__c - pse__Expense_Costs__c - pse__Other_Costs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Non_Billable_External_Hours__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Non-Billable Hours (External)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Non_Billable_Internal_Hours__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Non-Billable Hours (Internal)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Other_Costs__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Other Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Pass_Through_Billings__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Pass-Through Billings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Practice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Practice</label>
        <referenceTo>pse__Practice__c</referenceTo>
        <relationshipLabel>Resources</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Pre_Billed__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Pre-Billed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <referenceTo>pse__Region__c</referenceTo>
        <relationshipLabel>Resources</relationshipLabel>
        <relationshipName>Resources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Resource_Role__c</fullName>
        <label>Resource Role</label>
        <picklist>
            <picklistValues>
                <fullName>Architect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Analyst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trainer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pse__Revenue__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Salesforce_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Salesforce User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Scheduled_Utilization_Billable_Hours__c</fullName>
        <description>The scheduled utilization billable hours total for the current time period. This value has been copied from the associated Utilization Detail object for this time period.</description>
        <label>Scheduled Utilization Billable Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Scheduled_Utilization_Calendar_Hours__c</fullName>
        <description>The scheduled utilization calendar hours total for the current time period. This value has been copied from the associated Utilization Detail object for this time period.</description>
        <label>Scheduled Utilization Calendar Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Scheduled_Utilization_Credited_Hours__c</fullName>
        <description>The scheduled utilization credited hours total for the current time period. This value has been copied from the associated Utilization Detail object for this time period.</description>
        <label>Scheduled Utilization Credited Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Scheduled_Utilization_Excluded_Hours__c</fullName>
        <description>The scheduled utilization excluded hours total for the current time period. This value has been copied from the associated Utilization Detail object for this time period.</description>
        <label>Scheduled Utilization Excluded Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Scheduled_Utilization_Held_Hours__c</fullName>
        <label>Scheduled Utilization Held Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Scheduled_Utilization_Non_Billable_Hrs__c</fullName>
        <description>The scheduled utilization non-billable hours total for the current time period. This value has been copied from the associated Utilization Detail object for this time period.</description>
        <label>Scheduled Utilization Non Billable Hrs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Scheduled_Utilization_Target_Attainment__c</fullName>
        <formula>IF(pse__Scheduled_Utilization_Target__c = 0,
IF(pse__Scheduled_Utilization__c &lt;= 0,0,1),
pse__Scheduled_Utilization__c / pse__Scheduled_Utilization_Target__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scheduled Utilization Target Attainment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Scheduled_Utilization_Target_Hours__c</fullName>
        <label>Scheduled Utilization Target Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Scheduled_Utilization_Target__c</fullName>
        <formula>IF(pse__Scheduled_Utilization_Calendar_Hours__c = 0,
0,
pse__Scheduled_Utilization_Target_Hours__c / pse__Scheduled_Utilization_Calendar_Hours__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scheduled Utilization Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Scheduled_Utilization__c</fullName>
        <description>The scheduled utilization percentage for the current time period. This value has been copied from the associated Utilization Detail object for this time period.</description>
        <label>Scheduled Utilization</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Start_Date__c</fullName>
        <description>A Resource&apos;s first date of employment.</description>
        <inlineHelpText>A Resource&apos;s first date of employment.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Total_Costs__c</fullName>
        <formula>pse__Internal_Costs__c + pse__External_Costs__c + pse__Expense_Costs__c + pse__Other_Costs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Total_Time_Period_Hours__c</fullName>
        <description>[DEPRECATED, no longer used]</description>
        <label>Total Time Period Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Total_Utilization__c</fullName>
        <description>The overall (historical + scheduled) utilization percentage for the current time period. This value has been copied from the associated Utilization Detail object for this time period.</description>
        <label>Utilization</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Utilization_Calculation_Date__c</fullName>
        <label>Utilization:  Last Calculation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Utilization_Elapsed_Hours__c</fullName>
        <description>[DEPRECATED, no longer used]</description>
        <label>Utilization: Elapsed Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Utilization_Full_Time_Period__c</fullName>
        <description>[DEPRECATED, no longer used]</description>
        <formula>IF((pse__Total_Time_Period_Hours__c&gt;pse__Excluded_Hours__c),IF(AND(NOT(ISNULL(pse__Billable_Internal_Hours__c)),NOT(ISNULL(pse__Credited_Non_Billable_Internal_Hours__c)),NOT(ISNULL(pse__Total_Time_Period_Hours__c)),NOT(ISNULL(pse__Excluded_Hours__c))),(pse__Billable_Internal_Hours__c + pse__Credited_Non_Billable_Internal_Hours__c)/(pse__Total_Time_Period_Hours__c - pse__Excluded_Hours__c),0.00),0.00)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Utilization: Over Full Time Period</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Utilization_Last_Update_Date__c</fullName>
        <label>Utilization: Last Update Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pse__Utilization_Last_Updated_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Utilization: Last Updated By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Utilization_Target_Attainment__c</fullName>
        <formula>IF(pse__Utilization_Target_Average__c = 0,
IF(pse__Total_Utilization__c &lt;= 0,0,1),
pse__Total_Utilization__c / pse__Utilization_Target_Average__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Utilization Target Attainment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Utilization_Target_Average__c</fullName>
        <formula>IF(pse__Historical_Utilization_Calendar_Hours__c +  pse__Scheduled_Utilization_Calendar_Hours__c = 0,
0,
pse__Utilization_Target_Hours__c / ( pse__Historical_Utilization_Calendar_Hours__c +  pse__Scheduled_Utilization_Calendar_Hours__c )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Utilization Target Average</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Utilization_Target_Hours__c</fullName>
        <label>Utilization Target Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Utilization_Target__c</fullName>
        <description>A target percentage of utilization for this resource. For example, a target of 50% for an 8 hour per day work calendar, results in a 4 hour per day target that the resource should be utilized for.</description>
        <inlineHelpText>A target percentage of utilization for this resource. For example, a target of 50% for an 8 hour per day work calendar, results in a 4 hour per day target that the resource should be utilized for.</inlineHelpText>
        <label>Utilization Target</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Utilization__c</fullName>
        <description>[DEPRECATED, no longer used]</description>
        <formula>IF((pse__Utilization_Elapsed_Hours__c&gt;pse__Excluded_Hours__c),IF(AND(NOT(ISNULL(pse__Billable_Internal_Hours__c)),NOT(ISNULL(pse__Credited_Non_Billable_Internal_Hours__c)),NOT(ISNULL(pse__Utilization_Elapsed_Hours__c)),NOT(ISNULL(pse__Excluded_Hours__c))),(pse__Billable_Internal_Hours__c + pse__Credited_Non_Billable_Internal_Hours__c)/(pse__Utilization_Elapsed_Hours__c - pse__Excluded_Hours__c),0.00),0.00)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Utilization</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CFM_DNS_Reason__c</fullName>
        <description>Tracks the reason for choosing Do Not survey on the Contact record.</description>
        <label>DNS Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CFM_Do_Not_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check box if the contact has indicated that he or she does not want to receive surveys.</inlineHelpText>
        <label>Do Not Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CFM_Last_Survey_Date_Sent__c</fullName>
        <description>Show the most recent date a survey was sent to this Contact.</description>
        <inlineHelpText>Show the most recent date a survey was sent to this Contact.</inlineHelpText>
        <label>Last Survey Date Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Work_Calendar__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Calendar</label>
        <referenceTo>pse__Work_Calendar__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AECOM_Employees</fullName>
        <columns>FULL_NAME</columns>
        <columns>Status__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Shared_Services_Is_Executive__c</columns>
        <columns>ExpenditureType__c</columns>
        <columns>pse__External_Resource__c</columns>
        <columns>RoleType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.AECOM_Employee,Contact.PSA_Resource</value>
        </filters>
        <label>AECOM Employees</label>
        <language>en_US</language>
        <sharedTo>
            <group>SS_Accounts_Payable</group>
            <group>SS_Accounts_Payable_Escalation</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AGL_Contacts</fullName>
        <booleanFilter>1 or 2 or 3 or 4</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>AECOM_Contact__c</columns>
        <columns>Need_to_Know__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>startsWith</operation>
            <value>AGL Resources</value>
        </filters>
        <filters>
            <field>PARENT.NAME</field>
            <operation>startsWith</operation>
            <value>AGL Resources</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>contains</operation>
            <value>Nicor Gas</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>contains</operation>
            <value>Pivotal</value>
        </filters>
        <label>AGL Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AkzoNobel</fullName>
        <booleanFilter>1 or 2</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>AECOM_Contact__c</columns>
        <columns>Need_to_Know__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>contains</operation>
            <value>Akzo</value>
        </filters>
        <filters>
            <field>PARENT.NAME</field>
            <operation>contains</operation>
            <value>Akzo</value>
        </filters>
        <label>AkzoNobel</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Andrey_Davydov_s_contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>AECOM_Contact__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AECOM_Contact__c</field>
            <operation>contains</operation>
            <value>Andrey Davydov</value>
        </filters>
        <label>Andrey Davydov&apos;s contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Canda_opt_out</fullName>
        <booleanFilter>4 and (1 or 2 or 3)</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Status__c</columns>
        <columns>CONTACT.EMAIL_OPT_OUT</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.ADDRESS2_COUNTRY</field>
            <operation>equals</operation>
            <value>Canada</value>
        </filters>
        <filters>
            <field>Other_Country_Lookup__c</field>
            <operation>equals</operation>
            <value>Canada</value>
        </filters>
        <filters>
            <field>Other_Country__c</field>
            <operation>equals</operation>
            <value>Canada</value>
        </filters>
        <filters>
            <field>CONTACT.EMAIL_OPT_OUT</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Canda opt-out</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Client_Survey_recipients</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <columns>Mailings__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.LAST_ACTIVITY</field>
            <operation>greaterOrEqual</operation>
            <value>9/24/2012</value>
        </filters>
        <filters>
            <field>Mailings__c</field>
            <operation>equals</operation>
            <value>2012 Americas Client Survey</value>
        </filters>
        <filters>
            <field>CONTACT.LAST_ACTIVITY</field>
            <operation>lessOrEqual</operation>
            <value>10/2/2012</value>
        </filters>
        <label>Client Survey-Corrected Link Recipients</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Contacts_with_Cost_Rate</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>pse__Default_Cost_Rate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>pse__Default_Cost_Rate__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Contacts with Cost Rate</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Contacts_with_Oracle</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>User__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.PSA_Resource</value>
        </filters>
        <label>Contacts with Oracle Values</label>
        <language>en_US</language>
        <sharedTo>
            <group>Admin_users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DW_s_contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>AECOM_Contact__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AECOM_Contact__c</field>
            <operation>contains</operation>
            <value>David Whitehouse</value>
        </filters>
        <label>DW&apos;s contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>General_Electric_Contacts</fullName>
        <booleanFilter>(1 or 2 or 3 or 4)</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>contains</operation>
            <value>general electric</value>
        </filters>
        <filters>
            <field>PARENT.NAME</field>
            <operation>contains</operation>
            <value>general electric</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>startsWith</operation>
            <value>GE</value>
        </filters>
        <filters>
            <field>PARENT.NAME</field>
            <operation>startsWith</operation>
            <value>GE</value>
        </filters>
        <label>General Electric Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Jay_French</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Jay French</label>
        <language>en_US</language>
    </listViews>
</CustomObject>